/*
 * Copyright Â© 2020 Byte Motion AB
 */
syntax = "proto3";
package ocellus;
option java_multiple_files = true;
option java_package = "ocellus.servers.state";
option java_outer_classname = "OcellusMLService";
option objc_class_prefix = "OMLS";
option csharp_namespace = "Ocellus.Service.ML";

service OcellusMLService {
    rpc Infer(InferRequest) returns (InferResponse) {}
    rpc Unload(UnloadRequest) returns (UnloadResponse) {}
}

message InferRequest {
    string modelFile = 1;
    bytes imageData = 2;
    int32 width = 3;
    int32 height = 4;
    float minScore = 5;
    repeated int32 enabledLabels = 6;
}

message InferResponse {
    message InferenceResult {
        int32 label = 1;
        float score = 2;
        repeated float bbox = 3;
        repeated float mask = 4;
    }
    repeated InferenceResult result = 1;
    repeated string errors = 99;
}

message UnloadRequest {
    string modelFile = 1;
}

message UnloadResponse {
    repeated string errors = 99;
}